    # The HeaderFilters (views of list) & EntityFilters have been improved :
        - The ones without owner can now only be edited/deleted by superusers in the default
          configuration ; a SettingValue has been added to allow all users to edit/delete them
          (it was the behaviour in previous versions).
        - They can now be cloned.
    # The deletion views have now a better display for the dependencies issues.
      Example: entities are displayed as HTML links.
    # Apps :
        * Activities :
            - The JavaScript component FullCalendar has been upgraded to the version "6.1.15"
        * Creme_config :
            - The buttons configuration can now be customised per role.
            - The property types have now a field "description" (it can be empty of course).
            - In the bricks configuration, default configuration is used as initial value when it's relevant
              (instead of starting with an empty configuration).
            - In the relation types configuration, you can now edit the "minimal display" value for standard types.
            - A view which displays all "FileRefs" (temporary files) has been added; it's only available for staff users.
        * Persons :
            - A new optional field has been added to 'Organisation': "code".
              You can use it to distinguish you managed organisations when you get several ones.
              Upgrade note:
                if you upgrade from an instance of Creme 2.6, you have to configure your blocks to display
                this field if you want to see it. As the field is optional, you can also hide it to remove
                it everywhere (notably forms).
        * Documents :
            - A new field, automatically filled, has been added to Document: "file_size".
        * Activities :
            - A field of 'Activity', "Fixed or floating?" (internal name: 'floating_type') is now visible.